# CGPI

./: SEGUNDA CHAMADA OF2 - COMPUTAÇÃO GRÁFICA E PROCESSAMENTO DE IMAGENS.docx  main.py  pyproject.toml
